fix: viewport bottom overlap, number must be integer

--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -56,7 +56,6 @@
 }
 
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
@@ -76,7 +75,7 @@ body {
   margin: 0;
   overflow: hidden;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   height: var(--app-height);
 }
 
