--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -6,7 +6,7 @@
 
 #app {
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   max-height: 100%;
   width: 100vw;
   max-width: 100%;
@@ -16,15 +16,13 @@
 main {
   width: 100%;
   height: 100%;
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: fill-available;
-  height: stretch; /* Latest specification */
   display: flex;
   justify-content: center;
   align-items: center;
   overflow-y: hidden;
   overflow-x: hidden;
+  padding-bottom: 44px;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 @media (hover: hover) {
